Switch to Java 11 (#1596)
* Switch from Java 8 to Java 11
  * Update Github Actions workflow
  * Update Gitpod Dockerfile (use Java 11.0.13-tem Eclipse Adoptium Temurin build)
  * Update all `.classpath` files to use JavaSE-11
  * Update EdgeApp and BackendApp.bndrun to use JavaSE-11
* Replace apache xmlrpc with aXMLRPC
  * Apache ws-xmlrpc depends on javax.xml.bind, which was deprecated since Java 9 and was removed in Java 11
  * Thank you @gturri for providing a nearly drop-in replacement for Apache ws-xmlrpc
  * This also removes the dependency for Apache WebServices Common Utilities (`ws-commons-util`), which was also removed
  * Update OdooUtils to use aXMLRPC instead
* Replace deprecated methods in OneWire 
  - clazz.newInstance(): https://stackoverflow.com/questions/53257073/java-9-replace-class-newinstance
  - new Long() by Long.valueOf()
  - new Integer() by Integer.valueOf()
  - new Integer() by Integer.parseInt()
* Remove InfluxDB config as it is not installed by default in Gitpod
* By default remove the `.settings` directory which is specific to Eclipse IDE (via `tools/prepare-commit.sh`)

If you need a prepuilt Java Runtime Environment (JRE) for Java 11, please refer to https://adoptium.net/. Updated Debian Packages by the Eclipse Adoptium project are still work-in-progress (see https://github.com/adoptium/installer/issues/330), but the ones by Adopt-OpenJDK are still available here: https://adoptopenjdk.jfrog.io/ui/native/deb/pool/main/a